change description and name -  go template

--- a/go/template.yaml
+++ b/go/template.yaml
@@ -1,9 +1,9 @@
 apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
-  name: python-template
-  title: Python flask template
-  description: Provisions a minimalistic flask application
+  name: go-template
+  title: Go slim template
+  description: Go minimalistic application
 spec:
   owner: development
   type: service
