--- a/go/template/catalog-info.yaml
+++ b/go/template/catalog-info.yaml
@@ -9,5 +9,5 @@ metadata:
     backstage.io/techdocs-ref: dir:.
 spec:
   type: service
-  owner: ${{}}
+  owner: development
   lifecycle: experimental
